fixed menu-background z-index

--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,7 @@ h1 {
 }
 .dropdown-background-open {
   display: flex;
+  z-index: 1;
 }
 .dropdown-content-tag {
   display: flex;
